<resources>
    <string name="app_name">GoDine</string>

    <!--<string name="meet_go_dine_body">Join GoDine\u2122 for as little as $19.95 per month and begin receiving 50% Off your entree every single time you dine at any of the thousands of GoDine\u2122 VIP partner Restaurants across the country. The savings on just one meal out can pay for your membership for the month. </string>-->
    <string name="meet_go_dine_body">\u2022  Join GoDine\u2122 Today \n\u2022  Search GoDine® Restaurants \n\u2022  Dine out often \n\u2022  Save 50% Off your Entree every time! \n\u2022  Save Hundreds of Dollars every month!\n\u2022 Sign up a friend and get your next month’s membership for free</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">GoDine</string>
    <string name="login_bg_content1"><b>GET<font color='red'> 50% OFF</font></b></string>
    <string name="login_bg_content2"><font size='20'>EVERY TIME YOU DINE OUT*</font> </string>
    <string name="login_bg_content3">*Must be a memeber to receive 50% OFF(up to $25 savings)\n on your entire check every time you dine out at any\nGoDine Premier Partner Restaurant</string>

    <string name="title_activity_why_join">WhyJoinActivity</string>
    <string name="meet_go_dine_title">Meet GoDine\u2122</string>
    <string name="signup">GoDine® SignUp</string>
    <string name="Setting">Settings</string>
    <string name="go_dine_restaurant">GoDine® Restaurants</string>
    <string name="go_dine_restaurant_search_heading">Search restaurants from current location / ZipCode</string>
    <string name="contact_godine">Please enter your message below and we \n\t will respond back to you via email.For\n\t customer support click the link below</string>
    <string name="Godine">GoDine® FeedBack</string>
    <string name="feedback">Your opinion is important to us and helps\n us to improve your GoDine\u2122 experience.</string>
    <string name="feedback1">1. Please share your comments\n\t\tabout the GoDine®  App</string>
    <string name="feedback2">2. How satisified are you with\n\t\t GoDine® overall?</string>
    <string name="feedback3">We\'re always on the lookout for more great\nGoDine® Restaurant Partners.If you have\nany favorities  that aren\'t on our list that you\n\t would like to see join our club,add their\n\t\t name and city here.\t (Add up to 3)</string>
    <string name="why_join_banner_str">Receive 50% Off your Entrée\nevery time you dine out!</string>
    <string name="how_it_works">
        <![CDATA["<b>How it Works-</b>Using your GoDine® Mobile App is easy and fun! Simply search for GoDine® Restaurants wherever you are using the location services.
                Then filter by Cuisine, Price, Features, etc.You can also use the Map option for Turn-by-Turn directions to your restaurant location.<br/><b>Once you arrive-</b>Enjoy your meal(s) with friends and family. When it’s time to pay your check, let your server know that you are a GoDine® Member. He/she will ask you to:<br/>               <b>&nbsp;&nbsp;&nbsp;&nbsp; • Open the GoDine® App<br/>
               &nbsp;&nbsp;&nbsp;&nbsp; • Pull Up Validation Page – bottom menu (center button)<br/>
               &nbsp;&nbsp;&nbsp;&nbsp;• Server Validates Membership </b>- He/she will validate your membership by tapping the screen<br/>
               <b>&nbsp;&nbsp;&nbsp;&nbsp; • Server brings bill to the table
               <br/> &nbsp;&nbsp;&nbsp;&nbsp;  • You add Total Check  Savings –</b> amounts in the boxes on the membership validation screen<br/><b>
               &nbsp;&nbsp;&nbsp;&nbsp;• You press “Complete Validation Process” button
               <br/> &nbsp;&nbsp;&nbsp;&nbsp;• 10 Second Review -</b>You complete the 5 Second Review<br/><b>
               &nbsp;&nbsp;&nbsp;&nbsp;• Oh yeah, don’t forget to pay the check!<br/>
               &nbsp;&nbsp;&nbsp;&nbsp;• Tip your Sever generously - </b> Make sure to tip your server on the total amount before the discount is applied. They work just as hard for you even when you get such a great deal."]]></string>
    <string name="referaldetail">Please click Find a Sponsor to select your sponsor member </string>
    <string name="terms"><font color="blue">Terms and Conditions</font></string>
    <string name="refer">Refer as many friends as you can because for every friend that joins GoDine® using your member number, you\'ll get one FREE month of membership.</string>
    <string name="cancelmember">It\'s rare to see a member cancelling a membership with GoDine® so we\'re sorry to lose you as a member.Please tap here to continue the process.</string>
    <string name="changeimage">This sends an email to GoDine requesting to change your registration photo.GoDine will send you an email with instructions to provide your User Name, Password, Member #,and new photo for approval and change.</string>
    <string name="godinesplash">Join GoDine® for just $30 per month and</string>
    <string name="newhowitworks">(offer good at GoDine "Premier" Partner Restaurants Only\n GoDine Partner Restaurants offer 2 for 1).</string>
    <string-array name="States">
        <item>States</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string-array name="paid">
        <item>$25</item>
        <item>$54</item>
        <item>$66</item>
        <item>$95</item>
        <item>$668</item>
    </string-array>
    <string-array name="Status">
        <item>Success</item>
        <item>Cancelled</item>
        <item>Failed</item>
        <item>Cancelled</item>
        <item>Failed</item>
    </string-array>
    <string-array name="share">
        <item>Facebook</item>
        <item>Twitter</item>7006079781
        <item>Cancel</item>
    </string-array>
    <string name="title_activity_join__go_dine">GoDine® SignUp</string>
    <string name="titlemember">To Find sponsor enter member or cell number.</string>
    <string name="topmember">Find a Sponser</string>
    <string name="signupdiscount"> Receive <font color='red'> 50% Off</font> your Entrée</string>
    <string name="info">The Member Validation Photo is required to validate membership in the restaurant.\nThis photo must be a recent and easily recognizable front view photo of the member only and cannot be a group photo, couple, etc. Just as would be used for an ID card or Driver\'s License</string>
    <string name="select_rest_type">Dining Options</string>
    <string name="signuppopup">Select Your Referral Restaurant</string>
    <string name="signuppopup1">Not in List, Search for Your Restaurant</string>
    <string name="select_rest_cuisines">Select Multiple Values for Cuisine.</string>
    <string name="select_rest_features">Select Multiple Values for Features.</string>
    <string name="select_rest_price">Select Price Range.</string>
    <string name="select_rest_rating">Select Rating Value</string>
    <string name="GoDineSplash"><font size='16'><b></b></font>\n America\'s Premier Dining Club</string>
    <string name="preimrestoffer"><font size='18'><b>Premier Partner Restaurants</b></font>\n <font size='11'>50% OFF your check (up to $25) everytime</font></string>
    <string name="partnerrestoffer"><font size='18'><b>Partner Restaurants</b></font>\n <font size='11'>50% OFF any(1) Food Item or 2 for 1</font></string>
    <string name="Joinsteps">Join in 3 easy steps</string>
    <string name="enterprofile">Enter Profile Information</string>
    <string name="Joinsteps1">Dine out twice as often with the money you save</string>
    <string name="steps3">You\'re almost there!</string>
    <string name="steps3a">Just click here to input Secure Credit Card information</string>
    <string name="howitworks">Enjoying Your Membership</string>
    <string name="howitworks1">Using your GoDine® Membership is easy!</string>
    <string name="charity">The GoDine® Project</string>
    <string name="charity1">Feeding Americas Hungry One Member at a Time</string>
    <string name="charityText1">When you join GoDine you\'re not only getting a great benefit, you\'re helping to feed the hungry.</string>
    <string name="charityText2">That\'s because $1.00 per month of every GoDine membership goes to local hunger related charities!</string>
</resources>
