<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/welcomePageHeader"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:background="@drawable/profile_welcome"
       >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
           android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:src="@drawable/welcome_godin_text"
            android:id="@+id/imageView"
            android:layout_centerHorizontal="true" />
        <LinearLayout
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvWelcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="Welcome"
                android:padding="5dp"
                android:textColor="#fff"/>
            <TextView
                android:id="@+id/tvWelcomeUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:text="Atul"/>

        </LinearLayout>

    </RelativeLayout>


    <!--Profile Details Container -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_margin="5dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- PROFILE IMAGE CONTAINER -->

                <FrameLayout
                    android:layout_margin="5dp"
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:background="#33e0ff">

                    <ImageView
                        android:id="@+id/ivProfileImage"
                        android:scaleType="fitCenter"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <ImageView
                        android:id="@+id/imgUploadProfile"
                        android:layout_gravity="bottom"
                        android:padding="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="28dp"
                        android:background="#3399ff"
                        android:scaleType="center"
                        android:src="@drawable/change_profile"/>
                    <ProgressBar
                        android:layout_margin="5dp"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/progressBar"
                        android:visibility="gone" />
                </FrameLayout>

                <!--PROFILE IMAGE CONTAINER (START) -->

                <RelativeLayout
                    android:padding="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/godine_profile_card_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:src="@drawable/profile_card_logo"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:id="@+id/imageLogo" />

                    <LinearLayout
                        android:gravity="center"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginBottom="5dp"
                        android:layout_below="@+id/imageLogo"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView

                            android:text="Member ID"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/tvMembershipId"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_toRightOf="@+id/memberSincePart"
                        android:layout_toEndOf="@+id/memberSincePart"
                        android:id="@+id/cardPart1"
                        android:layout_marginBottom="5dp"
                        android:layout_below="@+id/imageLogo"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView

                            android:text="Membership Level"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/tvMembershipLevel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginBottom="5dp"
                        android:id="@+id/memberSincePart"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/cardPart1"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">
                        <TextView

                            android:text="Member Since"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/tvMemberSince"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginBottom="5dp"
                        android:layout_toRightOf="@+id/memberSincePart"
                        android:layout_toEndOf="@+id/memberSincePart"
                        android:gravity="center"
                        android:layout_below="@+id/cardPart1"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView

                            android:text="Good Thru"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:id="@+id/tvGoodThrough"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </RelativeLayout>

                <!--PROFILE IMAGE CONTAINER (END) -->

            </LinearLayout>

            <TextView
                android:paddingTop="5dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#fff"
                android:text="@string/charity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0a7cff"/>
            <TextView
                android:paddingBottom="5dp"
                android:gravity="center"
                android:textColor="#fff"
                android:textSize="10sp"
                android:text="@string/charity1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0a7cff"/>
            <LinearLayout
                android:background="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:weightSum="100"
                android:orientation="horizontal">
                <ImageView
                    android:layout_weight="65"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/charity">

                </ImageView>
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="35"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="Your Membership Counts!"
                        android:textStyle="bold"
                        android:textSize="14sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/charityText1"
                        android:textSize="12sp"/>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/charityText2"
                        android:textSize="12sp"/>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>
